{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 78,
  "lineage": "0a967321-c5b7-491a-d280-e97e8e51a2a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "myapp-df-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:780432333923:route-table/rtb-0e8b9ccb23f3c9467",
            "default_route_table_id": "rtb-0e8b9ccb23f3c9467",
            "id": "rtb-0e8b9ccb23f3c9467",
            "owner_id": "780432333923",
            "propagating_vgws": [],
            "region": "ca-central-1",
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03037f5d5d2046f23",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-myapp-df-rt"
            },
            "tags_all": {
              "Name": "dev-myapp-df-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-018a5c0d61e2750bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.myapp-gw",
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f435c88087d8e0de",
            "arn": "arn:aws:ec2:ca-central-1:780432333923:instance/i-0eabe9be73bb18cab",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eabe9be73bb18cab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "testing-v2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05e0b1014014552f1"
              }
            ],
            "primary_network_interface_id": "eni-05e0b1014014552f1",
            "private_dns": "ip-10-0-10-157.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.157",
            "public_ip": "35.183.108.194",
            "region": "ca-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0acdee52a436d3a53",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b6a7eef07b1c38c",
            "tags": {
              "Name": "dev-server"
            },
            "tags_all": {
              "Name": "dev-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0901776ca5c236ab8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "780432333923",
            "id": "i-0eabe9be73bb18cab",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_key_pair.ssh-key-pair",
            "aws_security_group.myapp-sg",
            "aws_subnet.myapp-subnet-1",
            "aws_vpc.myapp-vpc",
            "data.aws_ami.amazon-linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:780432333923:internet-gateway/igw-03037f5d5d2046f23",
            "id": "igw-03037f5d5d2046f23",
            "owner_id": "780432333923",
            "region": "ca-central-1",
            "tags": {
              "Name": "dev-myapp-gw"
            },
            "tags_all": {
              "Name": "dev-myapp-gw"
            },
            "vpc_id": "vpc-018a5c0d61e2750bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myapp-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:780432333923:security-group/sg-0901776ca5c236ab8",
            "description": "for myapp security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0901776ca5c236ab8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "142.166.225.247/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "myapp-sg",
            "name_prefix": "",
            "owner_id": "780432333923",
            "region": "ca-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-myapp-sg"
            },
            "tags_all": {
              "Name": "dev-myapp-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-018a5c0d61e2750bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "780432333923",
            "id": "sg-0901776ca5c236ab8",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myapp-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:780432333923:subnet/subnet-06b6a7eef07b1c38c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b6a7eef07b1c38c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "780432333923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "dev-subnet-1"
            },
            "tags_all": {
              "Name": "dev-subnet-1"
            },
            "vpc_id": "vpc-018a5c0d61e2750bc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "780432333923",
            "id": "subnet-06b6a7eef07b1c38c",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:780432333923:vpc/vpc-018a5c0d61e2750bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-023337dd50ed64fe7",
            "default_route_table_id": "rtb-0e8b9ccb23f3c9467",
            "default_security_group_id": "sg-0b38202ac28992fc1",
            "dhcp_options_id": "dopt-092fb615fdc719c5d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-018a5c0d61e2750bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e8b9ccb23f3c9467",
            "owner_id": "780432333923",
            "region": "ca-central-1",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "780432333923",
            "id": "vpc-018a5c0d61e2750bc",
            "region": "ca-central-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "myapp-sg-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:780432333923:security-group-rule/sgr-0bd52badff13f26b3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0bd52badff13f26b3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ca-central-1",
            "security_group_id": "sg-0901776ca5c236ab8",
            "security_group_rule_id": "sgr-0bd52badff13f26b3",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "780432333923",
            "id": "sgr-0bd52badff13f26b3",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_security_group.myapp-sg",
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "myapp-sg-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:780432333923:security-group-rule/sgr-04d2ab17327053826",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-04d2ab17327053826",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ca-central-1",
            "security_group_id": "sg-0901776ca5c236ab8",
            "security_group_rule_id": "sgr-04d2ab17327053826",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "780432333923",
            "id": "sgr-04d2ab17327053826",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_security_group.myapp-sg",
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "myapp-sg-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:780432333923:security-group-rule/sgr-0a2a0baada6fe6a5d",
            "cidr_ipv4": "142.166.225.247/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0a2a0baada6fe6a5d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ca-central-1",
            "security_group_id": "sg-0901776ca5c236ab8",
            "security_group_rule_id": "sgr-0a2a0baada6fe6a5d",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "780432333923",
            "id": "sgr-0a2a0baada6fe6a5d",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_security_group.myapp-sg",
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    }
  ]
}